--- a/Individual_report.ipynb
+++ b/Individual_report.ipynb
@@ -1,6 +1,53 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce602413-7e97-4a11-a316-e2f82082e1f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2f55e6f-6f2f-4fd6-b9fb-26fce2325f08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa2d0870-4a87-4a02-9dc7-f7ccdbfb02bc",
+   "metadata": {},
+   "source": [
+    "ini"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e5fb854-e1ef-4706-85ea-43cc1af56a4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
+  },
+  "language_info": {
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.3.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
