Finished data description section
Finished data description

--- a/Individual_report.ipynb
+++ b/Individual_report.ipynb
@@ -1,33 +1,65 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce602413-7e97-4a11-a316-e2f82082e1f2",
+   "cell_type": "markdown",
+   "id": "8c4355be-399c-4679-a404-f414f979effb",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2f55e6f-6f2f-4fd6-b9fb-26fce2325f08",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 1. Data Description\n",
+    "\n",
+    "## 1.1 Dataset Overview\n",
+    "In this project, I am working with the file **players.csv**, which contains one row per unique player and several demographic and gameplay-related features.\n",
+    "\n",
+    "- **Number of observations:** 196\n",
+    "- **Number of variables:** 7\n",
+    "\n",
+    "## 1.2 Variable Summary Table\n",
+    "\n",
+    "| Variable       | Type      | Description | Missing | Unique Values |\n",
+    "|----------------|-----------|-------------|---------|---------------|\n",
+    "| experience     | categorical | Player’s self-reported gaming experience | 0 | 5 |\n",
+    "| subscribe      | boolean | Whether the player subscribed to the newsletter | 0 | 2 |\n",
+    "| hashedEmail    | identifier | Unique hashed player ID | 0 | 196 |\n",
+    "| played_hours   | numeric | Total hours played on the server | 0 | 43 |\n",
+    "| name           | text | Player name | 0 | 196 |\n",
+    "| gender         | categorical | Gender identity | 0 | 7 |\n",
+    "| Age            | numeric | Player age in years | 2 | 32 |\n",
+    "\n",
+    "\n",
+    "## 1.3 Numeric Summary Statistics\n",
+    "*(Report values rounded to 2 decimals.)*\n",
+    "\n",
+    "| Variable     |Count | Mean | Std Dev | Min | Median | Max |\n",
+    "|--------------|------|----------|------|--------|------|----|\n",
+    "| played_hours |  196   |    5.85      |    28.36  |   0.00     |  0.10    |  223.1  |\n",
+    "| Age          |  194    |   21.14       |   7.39   |   9.00     |   19.00   |  58  |\n",
+    "\n",
+    "## 1.4 Notes and Potential Data Issues\n",
+    "- Age contains 2 missing values.  \n",
+    "- `played_hours` is heavily skewed with a few large outliers. Many players have close to 0 or very small play time.  \n",
+    "- There may be volunteer/self-selection bias in the dataset.  \n",
+    "- `name` contains personal information and should be excluded from all analysis.  \n",
+    "- Small category counts in gender may require grouping.  \n",
+    "- Subscription classes are imbalanced (about 73% subscribed).\n",
+    "- Experience appears to be ordinal and we should preserve this\n",
+    "  \n",
+    "   \n",
+    "\n",
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "aa2d0870-4a87-4a02-9dc7-f7ccdbfb02bc",
+   "id": "17ac9d28-ab64-4860-8662-a1498eb40e9e",
    "metadata": {},
    "source": [
-    "ini"
+    "The **players.csv** file contains 196 unique players and 7 variables. Key numeric variables are **played_hours** (total play time per player) and **Age** (two missing values). **subscribe** is a boolean indicating newsletter signup (144 True, 52 False). Categorical variables include **experience** (5 levels) and **gender** (7 categories). Computer checks found no duplicate **hashedEmail** identifiers. **played_hours** is highly skewed (mean 5.85 hours, median 0.10 hours, max 223.1). Potential limitations include class imbalance for **subscribe**, small counts in some **gender** categories, and volunteer bias inherent to the server dataset."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e5fb854-e1ef-4706-85ea-43cc1af56a4d",
+   "id": "aed6e3f8-b71c-4256-8f13-083e3dd8c221",
    "metadata": {},
    "outputs": [],
    "source": []
