Small changes made to the data description section

--- a/Individual_report.ipynb
+++ b/Individual_report.ipynb
@@ -44,8 +44,7 @@
     "- Experience appears to be ordinal and we should preserve this\n",
     "  \n",
     "   \n",
-    "\n",
-    "---"
+    "\n"
    ]
   },
   {
@@ -53,13 +52,13 @@
    "id": "17ac9d28-ab64-4860-8662-a1498eb40e9e",
    "metadata": {},
    "source": [
-    "The **players.csv** file contains 196 unique players and 7 variables. Key numeric variables are **played_hours** (total play time per player) and **Age** (two missing values). **subscribe** is a boolean indicating newsletter signup (144 True, 52 False). Categorical variables include **experience** (5 levels) and **gender** (7 categories). Computer checks found no duplicate **hashedEmail** identifiers. **played_hours** is highly skewed (mean 5.85 hours, median 0.10 hours, max 223.1). Potential limitations include class imbalance for **subscribe**, small counts in some **gender** categories, and volunteer bias inherent to the server dataset."
+    "The **players.csv** file contains 196 unique players and 7 variables. Key numeric variables are **played_hours** (total play time per player) and **Age** (two missing values). **subscribe** is a boolean indicating newsletter signup (144 True, 52 False). Categorical variables include **experience** (5 levels) and **gender** (7 categories). Computer checks found no duplicate **hashedEmail** identifiers. **played_hours** is highly skewed (mean 5.85 hours, median 0.10 hours, max 223.1). Potential limitations include class imbalance for **subscribe**, small counts in some **gender** categories, and volunteer bias inherent to the data collection method."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aed6e3f8-b71c-4256-8f13-083e3dd8c221",
+   "id": "9df94d6a-ba02-4870-b349-51b57dc4c9c8",
    "metadata": {},
    "outputs": [],
    "source": []
