Added question section
Added question section

--- a/Individual_report.ipynb
+++ b/Individual_report.ipynb
@@ -52,13 +52,29 @@
    "id": "17ac9d28-ab64-4860-8662-a1498eb40e9e",
    "metadata": {},
    "source": [
+    "## 1.5 Overall summary\n",
+    "\n",
     "The **players.csv** file contains 196 unique players and 7 variables. Key numeric variables are **played_hours** (total play time per player) and **Age** (two missing values). **subscribe** is a boolean indicating newsletter signup (144 True, 52 False). Categorical variables include **experience** (5 levels) and **gender** (7 categories). Computer checks found no duplicate **hashedEmail** identifiers. **played_hours** is highly skewed (mean 5.85 hours, median 0.10 hours, max 223.1). Potential limitations include class imbalance for **subscribe**, small counts in some **gender** categories, and volunteer bias inherent to the data collection method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "328f42ff-4be9-464d-b698-979cca2b7926",
+   "metadata": {},
+   "source": [
+    "# 2. Questions\n",
+    "\n",
+    "## 2.1 Broad Question\n",
+    "**What player characteristics and behaviours are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?**\n",
+    "\n",
+    "## 2.2 Specific Question\n",
+    "**Can player demographic attributes (`Age`, `gender`) and gameplay characteristics (`experience`, `played_hours`) predict whether a player subscribes to the game-related newsletter?**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9df94d6a-ba02-4870-b349-51b57dc4c9c8",
+   "id": "78cd3747-dc03-4680-bc91-feb2cb6a3c32",
    "metadata": {},
    "outputs": [],
    "source": []
