Updated question section
updated question section

--- a/Individual_report.ipynb
+++ b/Individual_report.ipynb
@@ -68,7 +68,9 @@
     "**What player characteristics and behaviours are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?**\n",
     "\n",
     "## 2.2 Specific Question\n",
-    "**Can player demographic attributes (`Age`, `gender`) and gameplay characteristics (`experience`, `played_hours`) predict whether a player subscribes to the game-related newsletter?**"
+    "**Can player demographic attributes (`Age`, `gender`) and gameplay characteristics (`experience`, `played_hours`) predict whether a player subscribes to the game-related newsletter?**\n",
+    "\n",
+    "This question is appropriate because `players.csv` contains all required explanatory variables and a clear binary response variable (`subscribe`). To apply models seen in class, we will likely need to scale the numeric variables, impute the missing values in the age variable, and encode the categorical variables to numeric form."
    ]
   },
   {
